--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -12,25 +12,33 @@
 #  * the License.
 #  *******************************************************************************/
 
-version: '3'
+version: '3.4'
+
+# all common shared environment variables defined here:
+x-common-env-variables: &common-variables
+  edgex_registry: consul://edgex-core-consul:8500
+  Clients_CoreData_Host: edgex-core-data
+  Clients_Logging_Host: edgex-support-logging
+  Logging_EnableRemote: "true"
+
 volumes:
   db-data:
   log-data:
   consul-config:
   consul-data:
+  consul-scripts:
   portainer_data:
   vault-config:
   vault-file:
   vault-logs:
+  secrets-setup-cache:
 
 services:
   volume:
-    image: objectboxio/edge-volume:1.0.2
+    image: nexus3.edgexfoundry.org:10004/docker-edgex-volume:1.1.0
     container_name: edgex-files
     networks:
-      edgex-network:
-        aliases:
-            - edgex-files
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -38,11 +46,10 @@ services:
       - consul-data:/consul/data
 
   consul:
-    image: consul:1.3.1
+    image: nexus3.edgexfoundry.org:10004/docker-edgex-consul:1.1.0
     ports:
       - "8400:8400"
       - "8500:8500"
-      - "8600:8600"
     container_name: edgex-core-consul
     hostname: edgex-core-consul
     networks:
@@ -54,11 +61,13 @@ services:
       - log-data:/edgex/logs
       - consul-config:/consul/config
       - consul-data:/consul/data
+      - consul-scripts:/consul/scripts
+      - vault-config:/vault/config
     depends_on:
       - volume
 
   config-seed:
-    image: objectboxio/edge-core-config-seed:1.0.2
+    image: objectboxio/edge-core-config-seed:1.1.0
     container_name: edgex-config-seed
     hostname: edgex-core-config-seed
     networks:
@@ -75,7 +84,7 @@ services:
       - consul
 
   vault:
-    image: edgexfoundry/docker-edgex-vault:1.0.0
+    image: objectboxio/edge-secret-store:1.1.0
     container_name: edgex-vault
     hostname: edgex-vault
     networks:
@@ -86,30 +95,38 @@ services:
       - "8200:8200"
     cap_add:
       - "IPC_LOCK"
-    command: "server -log-level=info"
     environment:
-      - 'VAULT_ADDR=https://edgex-vault:8200'
-      - 'VAULT_CONFIG_DIR=/vault/config'
-      - 'VAULT_UI=true'
+      - VAULT_ADDR=https://edgex-vault:8200
+      - VAULT_CONFIG_DIR=/vault/config
+      - VAULT_UI=true
+    command: >
+      /usr/bin/dumb-init -- /bin/sh -c
+      "exec /usr/local/bin/docker-entrypoint.sh server -log-level=info"
     volumes:
-      - vault-config:/vault/config
       - vault-file:/vault/file
       - vault-logs:/vault/logs
+      - secrets-setup-cache:/etc/edgex/pki
+      - vault-config:/vault/config
+      - consul-scripts:/consul/scripts
     depends_on:
       - volume
       - consul
 
   vault-worker:
-    image: edgexfoundry/docker-edgex-vault-worker-go:1.0.0
+    image: objectboxio/edge-security-secretstore-setup:1.1.0
     container_name: edgex-vault-worker
     hostname: edgex-vault-worker
-    command: ["--init=true", "--debug=false", "--wait=10", "--insureskipverify=false"]
+    entrypoint: >
+      /bin/sh -c
+      "until /consul/scripts/consul-svc-healthy.sh security-secrets-setup; do sleep 1; done;
+      /security-secretstore-setup --init=true --vaultInterval=10"
     networks:
       edgex-network:
         aliases:
             - edgex-vault-worker
     volumes:
       - vault-config:/vault/config
+      - consul-scripts:/consul/scripts
     depends_on:
       - volume
       - consul
@@ -131,20 +148,34 @@ services:
         - 'POSTGRES_USER=kong'
 
   kong-migrations:
-    image: "kong:1.0.3"
-    container_name: kong-migration
-    hostname: kong-migration
+    image: "kong:1.3.0"
+    container_name: kong-migrations
     networks:
       edgex-network:
         aliases:
-            - kong-migration
+            - kong-migrations
     environment:
         - 'KONG_DATABASE=postgres'
         - 'KONG_PG_HOST=kong-db'
-    command: "kong migrations bootstrap"
+    command: >
+      /bin/sh -cx
+      'until /consul/scripts/consul-svc-healthy.sh kong-db;
+         do sleep 1;
+      done && kong migrations bootstrap;
+      kong migrations list;
+      code=$$?;
+      if [ $$code -eq 5 ]; then
+        kong migrations up && kong migrations finish;
+      fi'
+    volumes:
+      - consul-scripts:/consul/scripts
+    depends_on:
+      - kong-db
+      - volume
+      - consul
 
   kong:
-    image: "kong:1.0.3"
+    image: "kong:1.3.0"
     container_name: kong
     hostname: kong
     networks:
@@ -164,19 +195,35 @@ services:
         - 'KONG_PROXY_ERROR_LOG=/dev/stderr'
         - 'KONG_ADMIN_ERROR_LOG=/dev/stderr'
         - 'KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl'
+    restart: on-failure
+    command: >
+      /bin/sh -c
+      "until /consul/scripts/consul-svc-healthy.sh kong-migrations; do sleep 1; done;
+      /docker-entrypoint.sh kong docker-start"
+    volumes:
+      - consul-scripts:/consul/scripts
     depends_on:
         - kong-db
+        - kong-migrations
+        - volume
+        - consul
 
   edgex-proxy:
-    image: "edgexfoundry/docker-edgex-proxy-go:1.0.0"
+    image: objectboxio/edge-security-proxy-setup:1.1.0
     container_name: edgex-proxy
     hostname: edgex-proxy
+    entrypoint: >
+      /bin/sh -c
+      "until /consul/scripts/consul-svc-healthy.sh kong; do sleep 1; done;
+      until /consul/scripts/consul-svc-healthy.sh security-secretstore-setup; do sleep 1; done;
+      /edgex/security-proxy-setup --init=true"
     networks:
       edgex-network:
         aliases:
             - edgex-proxy
     volumes:
-        - vault-config:/vault/config
+      - vault-config:/vault/config
+      - consul-scripts:/consul/scripts
     depends_on:
         - vault
         - kong-db
@@ -185,52 +232,51 @@ services:
 # end of containers for reverse proxy
 
 #  mongo:
-#    image: edgexfoundry/docker-edgex-mongo:1.0.1
+#    image: nexus3.edgexfoundry.org:10004/docker-edgex-mongo:1.1.0
 #    ports:
 #      - "27017:27017"
 #    container_name: edgex-mongo
 #    hostname: edgex-mongo
+#    entrypoint: >
+#      /bin/sh -c
+#      "until /consul/scripts/consul-svc-healthy.sh security-secretstore-setup; do sleep 1; done;
+#      /edgex-mongo/bin/edgex-mongo-launch.sh"
 #    networks:
-#      edgex-network:
-#        aliases:
-#            - edgex-mongo
+#      - edgex-network
 #    volumes:
-#      - db-data:/data/db
-#      - log-data:/edgex/logs
-#      - consul-config:/consul/config
-#      - consul-data:/consul/data
+#      - vault-config:/vault/config
+#      - consul-scripts:/consul/scripts
 #    depends_on:
 #      - volume
+#      - vault-worker
 
   logging:
-    image: objectboxio/edge-support-logging:1.0.2
+    image: objectboxio/edge-support-logging:1.1.0
     ports:
       - "48061:48061"
     container_name: edgex-support-logging
     hostname: edgex-support-logging
     networks:
-      edgex-network:
-        aliases:
-            - edgex-support-logging
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
       - consul-config:/consul/config
       - consul-data:/consul/data
+      - vault-config:/vault/config
     depends_on:
       - config-seed
+#      - mongo
       - volume
 
   system:
-    image: objectboxio/edge-sys-mgmt-agent:1.0.2
+    image: objectboxio/edge-sys-mgmt-agent:1.1.0
     ports:
       - "48090:48090"
     container_name: edgex-sys-mgmt-agent
     hostname: edgex-sys-mgmt-agent
     networks:
-      edgex-network:
-        aliases:
-            - edgex-sys-mgmt-agent
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -241,141 +287,114 @@ services:
       - logging
 
   notifications:
-    image: objectboxio/edge-support-notifications:1.0.2
+    image: objectboxio/edge-support-notifications:1.1.0
     ports:
       - "48060:48060"
     container_name: edgex-support-notifications
     hostname: edgex-support-notifications
     networks:
-      edgex-network:
-        aliases:
-            - edgex-support-notifications
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
       - consul-config:/consul/config
       - consul-data:/consul/data
+      - vault-config:/vault/config
     depends_on:
       - logging
 
   metadata:
-    image: objectboxio/edge-core-metadata:1.0.2
+    image: objectboxio/edge-core-metadata:1.1.0
     ports:
       - "48081:48081"
     container_name: edgex-core-metadata
     hostname: edgex-core-metadata
     networks:
-      edgex-network:
-        aliases:
-            - edgex-core-metadata
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
       - consul-config:/consul/config
       - consul-data:/consul/data
+      - vault-config:/vault/config
     depends_on:
       - logging
 
   data:
-    image: objectboxio/edge-core-data:1.0.2
+    image: objectboxio/edge-core-data:1.1.0
     ports:
       - "48080:48080"
       - "5563:5563"
     container_name: edgex-core-data
     hostname: edgex-core-data
     networks:
-      edgex-network:
-        aliases:
-            - edgex-core-data
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
       - consul-config:/consul/config
       - consul-data:/consul/data
+      - vault-config:/vault/config
     depends_on:
       - logging
 
   command:
-    image: objectboxio/edge-core-command:1.0.2
+    image: objectboxio/edge-core-command:1.1.0
     ports:
       - "48082:48082"
     container_name: edgex-core-command
     hostname: edgex-core-command
     networks:
-      edgex-network:
-        aliases:
-            - edgex-core-command
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
       - consul-config:/consul/config
       - consul-data:/consul/data
+      - vault-config:/vault/config
     depends_on:
       - metadata
 
   scheduler:
-    image: objectboxio/edge-support-scheduler:1.0.2
+    image: objectboxio/edge-support-scheduler:1.1.0
     ports:
       - "48085:48085"
     container_name: edgex-support-scheduler
     hostname: edgex-support-scheduler
     networks:
-      edgex-network:
-        aliases:
-            - edgex-support-scheduler
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
       - consul-config:/consul/config
       - consul-data:/consul/data
+      - vault-config:/vault/config
     depends_on:
       - metadata
 
-  export-client:
-    image: objectboxio/edge-export-client:1.0.2
+  app-service-rules:
+    image: nexus3.edgexfoundry.org:10004/docker-app-service-configurable:master
     ports:
-      - "48071:48071"
-    container_name: edgex-export-client
-    hostname: edgex-export-client
+      - "48100:48100"
+    container_name: edgex-app-service-configurable-rules
+    hostname: edgex-app-service-configurable-rules
     networks:
       edgex-network:
         aliases:
-            - edgex-export-client
-    volumes:
-      - db-data:/data/db
-      - log-data:/edgex/logs
-      - consul-config:/consul/config
-      - consul-data:/consul/data
+          - edgex-app-service-configurable-rules
+    environment:
+      <<: *common-variables
+      edgex_service: http://edgex-app-service-configurable-rules:48100
+      edgex_profile: rules-engine
+      Service_Host: edgex-app-service-configurable-rules
+      MessageBus_SubscribeHost_Host: edgex-core-data
     depends_on:
+      - consul
+      - logging
       - data
 
-  export-distro:
-    image: objectboxio/edge-export-distro:1.0.2
-    ports:
-      - "48070:48070"
-      - "5566:5566"
-    container_name: edgex-export-distro
-    hostname: edgex-export-distro
-    networks:
-      edgex-network:
-        aliases:
-            - edgex-export-distro
-    volumes:
-      - db-data:/data/db
-      - log-data:/edgex/logs
-      - consul-config:/consul/config
-      - consul-data:/consul/data
-    depends_on:
-      - export-client
-    environment:
-      - EXPORT_DISTRO_CLIENT_HOST=export-client
-      - EXPORT_DISTRO_DATA_HOST=edgex-core-data
-      - EXPORT_DISTRO_CONSUL_HOST=edgex-config-seed
-      - EXPORT_DISTRO_MQTTS_CERT_FILE=none
-      - EXPORT_DISTRO_MQTTS_KEY_FILE=none
-
   rulesengine:
-    image: edgexfoundry/docker-support-rulesengine:1.0.0
+    image: nexus3.edgexfoundry.org:10004/docker-support-rulesengine:master
     ports:
       - "48075:48075"
     container_name: edgex-support-rulesengine
@@ -383,21 +402,59 @@ services:
     networks:
       edgex-network:
         aliases:
-            - edgex-support-rulesengine
-    volumes:
-      - db-data:/data/db
-      - log-data:/edgex/logs
-      - consul-config:/consul/config
-      - consul-data:/consul/data
+          - edgex-support-rulesengine
     depends_on:
-      - export-client
+      - app-service-rules
+
+#  export-client:
+#    image: objectboxio/edge-export-client:1.1.0
+#    ports:
+#      - "48071:48071"
+#    container_name: edgex-export-client
+#    hostname: edgex-export-client
+#    networks:
+#      - edgex-network
+#    environment:
+#      <<: *common-variables
+#    volumes:
+#      - db-data:/data/db
+#      - log-data:/edgex/logs
+#      - consul-config:/consul/config
+#      - consul-data:/consul/data
+#      - vault-config:/vault/config
+#    depends_on:
+#      - data
+#
+#  export-distro:
+#    image: objectboxio/edge-export-distro:1.1.0
+#    ports:
+#      - "48070:48070"
+#      - "5566:5566"
+#    container_name: edgex-export-distro
+#    hostname: edgex-export-distro
+#    networks:
+#      - edgex-network
+#    volumes:
+#      - db-data:/data/db
+#      - log-data:/edgex/logs
+#      - consul-config:/consul/config
+#      - consul-data:/consul/data
+#    depends_on:
+#      - export-client
+#    environment:
+#      <<: *common-variables
+#      EXPORT_DISTRO_CLIENT_HOST: export-client
+#      EXPORT_DISTRO_DATA_HOST: edgex-core-data
+#      EXPORT_DISTRO_CONSUL_HOST: dgex-config-seed
+#      EXPORT_DISTRO_MQTTS_CERT_FILE: none
+#      EXPORT_DISTRO_MQTTS_KEY_FILE: none
 
 #################################################################
 # Device Services
 #################################################################
 
   device-virtual:
-    image: edgexfoundry/docker-device-virtual-go:1.0.0
+    image: nexus3.edgexfoundry.org:10004/docker-device-virtual-go:1.1.0
     ports:
     - "49990:49990"
     container_name: edgex-device-virtual
@@ -416,15 +473,13 @@ services:
     - command
 
   # device-random:
-  #   image: edgexfoundry/docker-device-random-go:1.0.0
+  #   image: nexus3.edgexfoundry.org:10004/docker-device-random-go:1.1.0
   #   ports:
   #     - "49988:49988"
   #   container_name: edgex-device-random
   #   hostname: edgex-device-random
   #   networks:
-  #     edgex-network:
-  #       aliases:
-  #           - edgex-device-random
+  #     - edgex-network
   #   volumes:
   #     - db-data:/data/db
   #     - log-data:/edgex/logs
@@ -435,15 +490,13 @@ services:
   #     - command
   #
   # device-mqtt:
-  #   image: edgexfoundry/docker-device-mqtt-go:1.0.0
+  #   image: nexus3.edgexfoundry.org:10004/docker-device-mqtt-go:1.1.0
   #   ports:
   #     - "49982:49982"
   #   container_name: edgex-device-mqtt
   #   hostname: edgex-device-mqtt
   #   networks:
-  #     edgex-network:
-  #       aliases:
-  #           - edgex-device-mqtt
+  #     - edgex-network
   #   volumes:
   #     - db-data:/data/db
   #     - log-data:/edgex/logs
@@ -454,15 +507,13 @@ services:
   #     - command
   #
   # device-modbus:
-  #   image: edgexfoundry/docker-device-modbus-go:1.0.0
+  #   image: nexus3.edgexfoundry.org:10004/docker-device-modbus-go:1.1.0
   #   ports:
   #     - "49991:49991"
   #   container_name: edgex-device-modbus
   #   hostname: edgex-device-modbus
   #   networks:
-  #     edgex-network:
-  #       aliases:
-  #           - edgex-device-modbus
+  #     - edgex-network
   #   volumes:
   #     - db-data:/data/db
   #     - log-data:/edgex/logs
@@ -473,15 +524,13 @@ services:
   #     - command
   #
   # device-snmp:
-  #   image: edgexfoundry/docker-device-snmp-go:1.0.0
+  #   image: nexus3.edgexfoundry.org:10004/docker-device-snmp-go:1.1.0
   #   ports:
   #     - "49993:49993"
   #   container_name: edgex-device-snmp
   #   hostname: edgex-device-snmp
   #   networks:
-  #     edgex-network:
-  #       aliases:
-  #           - edgex-device-snmp
+  #     - edgex-network
   #   volumes:
   #     - db-data:/data/db
   #     - log-data:/edgex/logs
@@ -495,15 +544,13 @@ services:
 # UIs
 #################################################################
   ui:
-    image: edgexfoundry/docker-edgex-ui-go:1.0.0
+    image: nexus3.edgexfoundry.org:10004/docker-edgex-ui-go:1.1.0
     ports:
       - "4000:4000"
     container_name: edgex-ui-go
     hostname: edgex-ui-go
     networks:
-      edgex-network:
-        aliases:
-            - edgex-ui-go
+      - edgex-network
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -531,4 +578,3 @@ services:
 networks:
   edgex-network:
     driver: "bridge"
-...
